mythos.css
.desc, #build, #play {
	display: none;
}

#header {
	display: flex;
}
#remdesc {
	padding-right: 20px;
}
#but {
	flex: 1;
}
#but button {
	width: 100%;
	height: 100%;
	font-size: 50px;
}

table th {
	text-align: right;
}
table td {
	color: white;
	font-weight: bold;
	padding: 0 5px;
}
td.green {
	background: #10783d;
}
td.yellow {
	background: #b58b1d;
}
td.blue {
	background: #3372b5;
}

.card {
	display: inline-block;
	position: relative;
	width: 275px;
	height: 435px;
	background-size: 100% 100%;
	border-radius: 10px;
}

.card .token {
	position: absolute;
	top: 0;
	width: 50px;
	height: 50px;
	background-size: 100% 100%;
}

.card .eldritch {
	right: 50px;
	background-image: url('eldritch.png');
}

.card .clue {
	left: 25px;
	background-image: url('clue.png');
}

.card .token p {
	color: white;
	text-align: center;
	margin-top: 8px;
	font: bold 30px serif;
	text-shadow:
		0 0 1px black,
		0 0 1px black,
		0 0 2px black,
		0 0 3px black;
}

.token .arrow {
	position: absolute;
	text-decoration: none;
	top: 15px;
	color: white;
	text-shadow:
		0 0 1px black,
		0 0 1px black,
		0 0 2px black,
		0 0 3px black;
}

.token .arrow.left {
	right: 55px;
}

.token .arrow.right {
	left: 55px;
}

.card .close {
	position: absolute;
	top: 0;
	right: 0;
	background: rgba(0, 0, 0, 0.7);
	color: white;
	text-decoration: none;
	padding: 2px 2px 10px 10px;
	border-radius: 0 10px 0 80%;
}

